Added mention of CLARGS_END_DEF.

--- a/clargs.3
+++ b/clargs.3
@@ -80,6 +80,11 @@ describes the signature of a function that can be used in the
 .BR clargs_set_int "() and " clargs_set_string ()
 are examples of this type of function.
 
+.SS Defines
+.TP 4
+.B CLARGS_END_DEF
+marks the end of the set of DefLine elements in an array.  See EXAMPLE section.
+
 .SS Functions
 .\"
 .\" Function definition: clargs_process()
